--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     </header>
     <div class="image-text">
         <p>
-           
             <div class="body-message">
                 <h3>Hi Folks!</h3>
                 <h1>Innovation Dedication</h1>
@@ -48,6 +47,29 @@
         </p>
         <img src="banner pic.png" alt="banner">
     </div>    
+    <footer>
+        <div>
+            <ul class="stats">
+                <li>
+                    <h1>200+</h1>
+                    <h3>Member</h3>
+                </li>
+                <li>
+                    <h1>20</h1>
+                    <h3>Waste Bank</h3>
+                </li>
+                <li>
+                    <h1>50</h1>
+                    <h3>Products</h3>
+                </li>
+                <li>
+                    <h1>150</h1>
+                    <h3>Course Education</h3>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
 
   
 </body>
